# file_sort

./: .gitignore  Cargo.toml  Pipfile  build.rs  comic_sort.py  config.json  config.yaml  justfile  specials.py
.junie/: guidelines.md  refactoring_design.md
docs/: plan.md  tasks.md
src/: cli.rs  config.rs  configuration.rs  constants.rs  errors.rs  folder_function.rs  lib.rs  logging.rs  main.rs  parser.rs  processor.rs  rules.rs  transformative_function.rs  utils.rs
src/config/: deserializer.rs  loader.rs  mod.rs  model.rs  serializer.rs  wizard.rs
src/discovery/: content_analyser.rs  matcher.rs  mod.rs  scanner.rs
src/file_ops/: actions.rs  converter.rs  mod.rs
src/lib/: config.rs  mod.rs  parser.rs  processing.rs  structs.rs
src/parser/: utils.rs
src/path_gen/: mod.rs  pattern.rs  transformer.rs
src/processor/: core.rs  file_operations.rs  format_conversion.rs  mod.rs  path_handling.rs  pattern_matching.rs
src/workflow/: context.rs  engine.rs  mod.rs
tests/: config_inheritance_test.rs  config_validation_test.rs  content_rules_test.rs  env_expansion_test.rs  file_operations_test.rs  parallel_processing_test.rs  parallel_test.rs  path_handling_test.rs  pattern_matching_test.rs  processor_test.rs  rule_processing_test.rs  serialization_test.rs  utils_test.rs  wizard_test.rs
tests/configs/: child_config.yaml  content_rules_config.yaml  parent_config.yaml
