[package]
name = "file_sort"
version = "2.1.4"
authors = ["Ondřej Vágner <ondrej.vagner@gmail.com>"]
edition = "2024"
description = "Moves files into their appropriate folders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["cargo"] }
colored = "3.0"
directories = "6.0"
dont_disappear = "3.0"
fern = { version = "0.7", features = ["colored"] }
fs_extra = "1.3"
glob = "0.3"
human-panic = "2.0"
log = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "3.1"
once_cell = "1.19.0"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3.10.1"

[[bin]]
name = "fsort"
path = "src/main.rs"
